Attempt to fix up the footer alignment

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -4,12 +4,15 @@
 
 .site-footer {
     position: relative;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    width: 95%;
     margin: 8rem 0 0;
     padding: 1rem 15px;
     font-family: "Open Sans", sans-serif;
     font-size: 1rem;
     line-height: 1.75em;
-    color: #040404;
+    background-color: #040404;
 }
 
 .site-footer a {
@@ -24,8 +27,6 @@
 }
 
 .logo {
-    display: block;
-    width: 25%;
     float: left;
     text-align: right;    
 }
@@ -37,15 +38,11 @@
 }
 
 .socialButtons {
-    display: block;
-    width: 25%;
     float: right;
     text-align: right;
 }
 
 .copyright {
-    display: block;
-    width: 25%;
     float: center;
 }
 
